<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/emptyContainerForCalenderStyling"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/g_grey_border_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calenderTextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/g_grey_borders_with_white_fill_bg"
        android:fontFamily="@font/product_sans_medium"
        android:paddingHorizontal="55dp"
        android:paddingVertical="9dp"
        android:text="@string/g_calender"
        android:textColor="@color/g_orange"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintEnd_toEndOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintStart_toStartOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintTop_toTopOf="@id/emptyContainerForCalenderStyling" />


    <TextView
        android:id="@+id/monthNameTextViewForHomePageCalender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/g_orange_bg_for_month_name_and_buttons"
        android:fontFamily="@font/product_sans_medium"
        android:paddingHorizontal="30dp"
        android:paddingVertical="9dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintLeft_toLeftOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintRight_toRightOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintTop_toBottomOf="@id/emptyContainerForCalenderStyling"
        tools:text="January\nKartak-Magsar" />

    <ImageButton
        android:id="@+id/monthChangingButtonForHomePageCalenderLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/g_orange_bg_for_month_name_and_buttons"
        android:contentDescription="@string/g_button_to_change_calender_month_to_previous_month"
        android:fontFamily="@font/product_sans_medium"
        android:foreground="@drawable/g_white_ripple_effect"
        android:paddingHorizontal="13dp"
        android:paddingVertical="12dp"
        android:src="@drawable/g_ic_prev_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintEnd_toStartOf="@id/monthNameTextViewForHomePageCalender"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintTop_toBottomOf="@id/emptyContainerForCalenderStyling" />


    <ImageButton
        android:id="@+id/monthChangingButtonForHomePageCalenderRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/g_orange_bg_for_month_name_and_buttons"
        android:contentDescription="@string/g_button_to_change_calender_month_to_next_month"
        android:fontFamily="@font/product_sans_medium"
        android:foreground="@drawable/g_white_ripple_effect"
        android:paddingHorizontal="13dp"
        android:paddingVertical="12dp"
        android:src="@drawable/g_ic_next_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintEnd_toEndOf="@id/emptyContainerForCalenderStyling"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@id/monthNameTextViewForHomePageCalender"
        app:layout_constraintTop_toBottomOf="@id/emptyContainerForCalenderStyling" />


    <androidx.cardview.widget.CardView
        android:id="@+id/calenderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/h_page_calender_bg"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/monthNameTextViewForHomePageCalender"
        app:layout_goneMarginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/hCalenderHeadersStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/h_calender_headers_name_orange_bg_left_child"
                    android:text="@string/g_sunday" />

                <TextView
                    style="@style/hCalenderHeadersStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/h_calender_headers_name_orange_bg"
                    android:text="@string/g_monday" />

                <TextView
                    style="@style/hCalenderHeadersStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/h_calender_headers_name_orange_bg"
                    android:text="@string/g_tuesday" />

                <TextView
                    style="@style/hCalenderHeadersStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/h_calender_headers_name_orange_bg"
                    android:text="@string/g_wednesday" />

                <TextView
                    style="@style/hCalenderHeadersStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/h_calender_headers_name_orange_bg"
                    android:text="@string/g_thursday" />

                <TextView
                    style="@style/hCalenderHeadersStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/h_calender_headers_name_orange_bg"
                    android:text="@string/g_friday" />

                <TextView
                    style="@style/hCalenderHeadersStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/h_calender_headers_name_orange_bg_right_child"
                    android:text="@string/g_saturday" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/homePageCalenderRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/home_page_calender_recycler_view_layout"
                tools:orientation="horizontal" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/g_borders" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>