<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >


    <!--    HOME-->

    <com.factor.bouncy.BouncyNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/emptyContainerForCalenderStylingInMainCalenderPage"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/g_grey_border_bg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calenderTextTextViewCalenderPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/g_grey_borders_with_white_fill_bg"
                android:fontFamily="@font/product_sans_medium"
                android:paddingHorizontal="55dp"
                android:paddingVertical="9dp"
                android:text="@string/g_calender"
                android:textColor="@color/g_orange"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintEnd_toEndOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintStart_toStartOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintTop_toTopOf="@id/emptyContainerForCalenderStylingInMainCalenderPage" />


            <LinearLayout
                android:id="@+id/monthNameTextContainerForCalenderPageCalender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/g_orange_bg_for_month_name_and_buttons"
                android:orientation="vertical"
                android:paddingHorizontal="44dp"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintLeft_toLeftOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintRight_toRightOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintTop_toBottomOf="@id/emptyContainerForCalenderStylingInMainCalenderPage">

                <TextView
                    android:id="@+id/monthNameTextViewForCalenderPageCalender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/product_sans_medium"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="January" />

                <TextView
                    android:id="@+id/hinduMonthNameTextViewForCalenderPageCalender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:fontFamily="@font/product_sans_medium"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    tools:ignore="SmallSp"
                    tools:text="Kartak-Magsar" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/monthChangingButtonForCalenderPageCalenderLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/g_orange_bg_for_month_name_and_buttons"
                android:fontFamily="@font/product_sans_medium"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="13dp"
                android:paddingVertical="12dp"
                android:src="@drawable/g_ic_prev_btn"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintEnd_toStartOf="@id/monthNameTextContainerForCalenderPageCalender"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintTop_toBottomOf="@id/emptyContainerForCalenderStylingInMainCalenderPage" />


            <ImageButton
                android:id="@+id/monthChangingButtonForCalenderPageCalenderRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/g_orange_bg_for_month_name_and_buttons"
                android:fontFamily="@font/product_sans_medium"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="13dp"
                android:paddingVertical="12dp"
                android:src="@drawable/g_ic_next_btn"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintEnd_toEndOf="@id/emptyContainerForCalenderStylingInMainCalenderPage"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@id/monthNameTextContainerForCalenderPageCalender"
                app:layout_constraintTop_toBottomOf="@id/emptyContainerForCalenderStylingInMainCalenderPage" />


            <LinearLayout
                android:id="@+id/calenderContainerCalenderPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:background="@color/g_borders"
                android:paddingVertical="0.5dp"
                app:layout_constraintTop_toBottomOf="@id/monthNameTextContainerForCalenderPageCalender">

                <!--                <View-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="0.5dp"-->
                <!--                    android:background="@color/border_color_for_main_calender_children" />-->


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/mainCalenderHeadersStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/c_calender_headers_orange_bg_left"
                        android:paddingHorizontal="8dp"
                        android:text="@string/g_sunday" />

                    <TextView
                        style="@style/mainCalenderHeadersStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/c_calender_headers_orange_bg_left"
                        android:text="@string/g_monday" />

                    <TextView
                        style="@style/mainCalenderHeadersStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/c_calender_headers_orange_bg_left"
                        android:text="@string/g_tuesday" />

                    <TextView
                        style="@style/mainCalenderHeadersStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/c_calender_headers_orange_bg_left"
                        android:text="@string/g_wednesday" />

                    <TextView
                        style="@style/mainCalenderHeadersStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/c_calender_headers_orange_bg_left"
                        android:text="@string/g_thursday" />

                    <TextView
                        style="@style/mainCalenderHeadersStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/c_calender_headers_orange_bg_left"
                        android:text="@string/g_friday" />

                    <TextView
                        style="@style/mainCalenderHeadersStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/c_calender_headers_orange_bg_left"
                        android:text="@string/g_saturday" />

                </LinearLayout>

                <com.factor.bouncy.BouncyRecyclerView

                    android:id="@+id/calenderPageCalenderRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:background="@color/border_color_for_main_calender_children"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/calenderContainerCalenderPage" />-->
            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:background="@color/border_color_for_main_calender_children"-->
            <!--                app:layout_constraintBottom_toTopOf="@id/calenderContainerCalenderPage" />-->


            <TextView
                android:id="@+id/aboutUsTextViewCalenderPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/g_about_us"
                android:textAlignment="center"
                android:textColor="@color/g_orange"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calenderContainerCalenderPage" />


            <TextView
                android:id="@+id/rateUsTextViewCalenderPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/g_rate_us"
                android:textAlignment="center"
                android:textColor="@color/g_orange"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutUsTextViewCalenderPage" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.factor.bouncy.BouncyNestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>