<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choghadiyaContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/g_grey_border_bg"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/currentChoghadiyaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/h_current"
            android:textColor="@color/g_grey_text_color_one"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/currentChoghadiyaNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="@color/g_orange"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/currentChoghadiyaTextView"
            app:layout_constraintTop_toBottomOf="@id/currentChoghadiyaTextView"
            tools:text="Current" />


        <ImageView
            android:layout_width="19dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/h_arrow_description_choghadiya"
            android:src="@drawable/h_ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/nextChoghadiyaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="38dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/h_next"
            android:textColor="@color/g_grey_text_color_one"
            android:textSize="9sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/nextChoghadiyaNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="@color/g_orange"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nextChoghadiyaTextView"
            app:layout_constraintTop_toBottomOf="@id/nextChoghadiyaTextView"
            tools:text="Current" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/monthNameInFestivalsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/g_grey_borders_with_white_fill_bg"
        android:fontFamily="@font/product_sans_medium"
        android:paddingHorizontal="30dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/h_choghadiya_heading"
        android:textColor="@color/g_orange"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/choghadiyaContainer"
        app:layout_constraintEnd_toEndOf="@id/choghadiyaContainer"
        app:layout_constraintStart_toStartOf="@id/choghadiyaContainer"
        app:layout_constraintTop_toTopOf="@id/choghadiyaContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>